# zippy

./: .gitignore  LICENSE.markdown  README.markdown  cabal.project  stack.yaml  zippy.cabal
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
replays/: 0008.replay  000b.replay  0416.replay  07e9.replay  0ad2.replay  1205.replay  160c.replay  16d5.replay  18d6.replay  1a12.replay  1ae4.replay  1bc2.replay  1d1d.replay  1ec9.replay  1ef9.replay  1f37.replay  2114.replay  21a8.replay  2266.replay  22ba.replay  27b6.replay  29f5.replay  2cfe.replay  3381.replay  372d.replay  383e.replay  387f.replay  3abd.replay  3ea1.replay  4126.replay  419a.replay  42f0.replay  42f2.replay  4bc3.replay  504e.replay  520e.replay  524f.replay  52aa.replay  540d.replay  551c.replay  (+60 more)
src/exe/: Main.hs
src/lib/: Zippy.hs
src/lib/Exception/: Empty.hs  Fail.hs  InvalidBoolean.hs  InvalidMaxChannels.hs  InvalidNumFrames.hs  MissingMaxChannels.hs  OutOfRange.hs  UnknownProperty.hs
src/lib/RocketLeague/: Array.hs  AttributeMapping.hs  Boolean.hs  Cache.hs  ClassMapping.hs  CompressedWord.hs  Content.hs  Context.hs  Dict.hs  Dictionary.hs  F32.hs  Frame.hs  Frames.hs  Header.hs  I32.hs  KeyFrame.hs  Keyframe.hs  Mark.hs  Message.hs  Property.hs  Replay.hs  Replication.hs  Section.hs  Str.hs  Stream.hs  U16.hs  U32.hs  U64.hs  U8.hs  Vec.hs  Version.hs
src/lib/RocketLeague/Property/: Array.hs  Bool.hs  Byte.hs  Float.hs  Int.hs  Name.hs  QWord.hs  Str.hs
src/lib/RocketLeague/Replication/: Destroyed.hs  Spawned.hs  Updated.hs
src/lib/Zippy/: BitGet.hs  BitString.hs  ByteDecoder.hs  ByteGet.hs  Config.hs  Convert.hs  Flag.hs  Get.hs  JsonDecoder.hs  Main.hs
src/lib/Zippy/Class/: FromBits.hs  FromBytes.hs  FromJson.hs  ToBits.hs  ToBytes.hs  ToJson.hs
src/lib/Zippy/Type/: BitBuilder.hs  BitString.hs  Config.hs  Decoder.hs  Flag.hs  Json.hs  List.hs  Mode.hs  Option.hs  Pair.hs  Result.hs
src/test/: Main.hs
src/util/: copy-executable.hs
