cabal-version: >= 1.8

name: zippy
version: 0.0.0.0
synopsis: Parse and generate Rocket League replays.
description: Zippy parses and generates Rocket League replays.

build-type: Simple
category: Game
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/zippy
  type: git

library
  build-depends:
    base >= 4.12.0 && < 4.15
    , bytestring >= 0.10.8 && < 0.11
    , filepath >= 1.4.2 && < 1.5
    , text >= 1.2.3 && < 1.3
  exposed-modules: Zippy
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: src/lib
  other-modules:
    Paths_zippy
    RocketLeague.Replay
    Zippy.Main
    Zippy.Type.Config
    Zippy.Type.Decoder
    Zippy.Type.Flag
    Zippy.Type.Json
    Zippy.Type.List
    Zippy.Type.Mode
    Zippy.Type.Pair
    Zippy.Type.Result

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

executable zippy
  build-depends: base, zippy
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/exe
  main-is: Main.hs

test-suite test
  build-depends:
    base
    , directory >= 1.3.3 && < 1.4
    , zippy
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
