cabal-version: >= 1.10

name: zippy
version: 0.0.0.0
synopsis: Parse and generate Rocket League replays.
description: Zippy parses and generates Rocket League replays.

build-type: Simple
category: Game
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/zippy
  type: git

library
  build-depends:
    base >= 4.14.1 && < 4.15
    , array >= 0.5.4 && < 0.6
    , bytestring >= 0.10.12 && < 0.11
    , text >= 1.2.4 && < 1.3
  default-extensions:
    NamedFieldPuns
  default-language: Haskell2010
  exposed-modules:
    Exception.Empty
    Exception.Fail
    Exception.InvalidBoolean
    Exception.InvalidMaxChannels
    Exception.InvalidNumFrames
    Exception.MissingMaxChannels
    Exception.OutOfRange
    Exception.UnknownProperty
    Paths_zippy
    RocketLeague.AttributeMapping
    RocketLeague.Boolean
    RocketLeague.Cache
    RocketLeague.ClassMapping
    RocketLeague.CompressedWord
    RocketLeague.Content
    RocketLeague.Dict
    RocketLeague.F32
    RocketLeague.Frame
    RocketLeague.Frames
    RocketLeague.Header
    RocketLeague.I32
    RocketLeague.Keyframe
    RocketLeague.Mark
    RocketLeague.Message
    RocketLeague.Property
    RocketLeague.Property.Array
    RocketLeague.Property.Bool
    RocketLeague.Property.Byte
    RocketLeague.Property.Float
    RocketLeague.Property.Int
    RocketLeague.Property.Name
    RocketLeague.Property.QWord
    RocketLeague.Property.Str
    RocketLeague.Replay
    RocketLeague.Replication
    RocketLeague.Replication.Destroyed
    RocketLeague.Replication.Spawned
    RocketLeague.Replication.Updated
    RocketLeague.Section
    RocketLeague.Str
    RocketLeague.Stream
    RocketLeague.U32
    RocketLeague.U64
    RocketLeague.Vec
    RocketLeague.Version
    Zippy
    Zippy.BitGet
    Zippy.BitString
    Zippy.ByteGet
    Zippy.Config
    Zippy.Flag
    Zippy.Get
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
  hs-source-dirs: src/lib

executable zippy
  build-depends: base, zippy
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/exe
  main-is: Main.hs

test-suite test
  build-depends: base, zippy
  default-language: Haskell2010
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
